--- a/StarshipTraveler.UI.Client/wwwroot/index.html
+++ b/StarshipTraveler.UI.Client/wwwroot/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="css/site.css" rel="stylesheet" />
 
+    <script>
+        js = {
+            confirm: message => window.confirm(message),
+            alert: message => { window.alert(message); return true; }
+        }
+        window.starshipTravel = js;
+    </script>
+
     <title>Starship Traveler</title>
 </head>
 <body>
