--- a/Start/StarshipTraveler.Client/wwwroot/index.html
+++ b/Start/StarshipTraveler.Client/wwwroot/index.html
@@ -6,7 +6,7 @@
     <base href="/" />
     <link href="https://fonts.googleapis.com/css?family=Teko" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="css/site.css" rel="stylesheet" />
+    <link href="_content/StarshipTraveler.Components/css/site.css" rel="stylesheet" />
 
     <title>Starship Traveler</title>
 </head>
